==> TAKETODAY/self-balancing-robot/src/foc/drivers/hardware_specific/atmega/atmega2560_mcu.cpp <==
#include "../../hardware_api.h"
#define _PWM_FREQUENCY 32000
#define _PWM_FREQUENCY_MAX 32000
#define _PWM_FREQUENCY_MIN 4000

void* _configure1PWM(long pwm_frequency, const int pinA) {
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 32kHz
  else pwm_frequency = _constrain(pwm_frequency, _PWM_FREQUENCY_MIN, _PWM_FREQUENCY_MAX); // constrain to 4-32kHz max
  //  High PWM frequency
  // - always max 32kHz
  _pinHighFrequency(pinA, pwm_frequency);
  GenericDriverParams* params = new GenericDriverParams{
    .pins = { pinA },
    .pwm_frequency = pwm_frequency,
    .dead_zone = 0.0f
  };
  return params;
}

void* _configure2PWM(long pwm_frequency, const int pinA, const int pinB) {
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 32kHz
  else pwm_frequency = _constrain(pwm_frequency, _PWM_FREQUENCY_MIN, _PWM_FREQUENCY_MAX); // constrain to 4-32kHz max
  //  High PWM frequency
  // - always max 32kHz
  _pinHighFrequency(pinA, pwm_frequency);
  _pinHighFrequency(pinB, pwm_frequency);
  GenericDriverParams* params = new GenericDriverParams{
    .pins = { pinA, pinB },
    .pwm_frequency = pwm_frequency,
    .dead_zone = 0.0f
  };
  return params;
}

void* _configure3PWM(long pwm_frequency, const int pinA, const int pinB, const int pinC) {
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 32kHz
  else pwm_frequency = _constrain(pwm_frequency, _PWM_FREQUENCY_MIN, _PWM_FREQUENCY_MAX); // constrain to 4-32kHz max
  //  High PWM frequency
  // - always max 32kHz
  _pinHighFrequency(pinA, pwm_frequency);
  _pinHighFrequency(pinB, pwm_frequency);
  _pinHighFrequency(pinC, pwm_frequency);
  GenericDriverParams* params = new GenericDriverParams{
    .pins = { pinA, pinB, pinC },
    .pwm_frequency = pwm_frequency,
    .dead_zone = 0.0f
  };
  // _syncAllTimers();
  return params;
}

void _writeDutyCycle1PWM(float dc_a, void* params) {
  // transform duty cycle from [0,1] to [0,255]
  analogWrite(((GenericDriverParams*) params)->pins[0], 255.0f * dc_a);
}

void _writeDutyCycle2PWM(float dc_a, float dc_b, void* params) {
  // transform duty cycle from [0,1] to [0,255]
  analogWrite(((GenericDriverParams*) params)->pins[0], 255.0f * dc_a);
  analogWrite(((GenericDriverParams*) params)->pins[1], 255.0f * dc_b);
}

void _writeDutyCycle3PWM(float dc_a, float dc_b, float dc_c, void* params) {
  // transform duty cycle from [0,1] to [0,255]
  analogWrite(((GenericDriverParams*) params)->pins[0], 255.0f * dc_a);
  analogWrite(((GenericDriverParams*) params)->pins[1], 255.0f * dc_b);
  analogWrite(((GenericDriverParams*) params)->pins[2], 255.0f * dc_c);
}

void* _configure4PWM(long pwm_frequency, const int pin1A, const int pin1B, const int pin2A, const int pin2B) {
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 32kHz
  else pwm_frequency = _constrain(pwm_frequency, _PWM_FREQUENCY_MIN, _PWM_FREQUENCY_MAX); // constrain to 4-32kHz max
  //  High PWM frequency
  // - always max 32kHz
  _pinHighFrequency(pin1A, pwm_frequency);
  _pinHighFrequency(pin1B, pwm_frequency);
  _pinHighFrequency(pin2A, pwm_frequency);
  _pinHighFrequency(pin2B, pwm_frequency);
  GenericDriverParams* params = new GenericDriverParams{
    .pins = { pin1A, pin1B, pin2A, pin2B },
    .pwm_frequency = pwm_frequency,
    .dead_zone = 0.0f
  };
  return params;
}

void _writeDutyCycle4PWM(float dc_1a, float dc_1b, float dc_2a, float dc_2b, void* params) {
  // transform duty cycle from [0,1] to [0,255]
  analogWrite(((GenericDriverParams*) params)->pins[0], 255.0f * dc_1a);
  analogWrite(((GenericDriverParams*) params)->pins[1], 255.0f * dc_1b);
  analogWrite(((GenericDriverParams*) params)->pins[2], 255.0f * dc_2a);
  analogWrite(((GenericDriverParams*) params)->pins[3], 255.0f * dc_2b);
}

void* _configure6PWM(long pwm_frequency, float dead_zone, const int pinA_h, const int pinA_l, const int pinB_h, const int pinB_l, const int pinC_h, const int pinC_l) {
  if (!pwm_frequency || !_isset(pwm_frequency)) pwm_frequency = _PWM_FREQUENCY; // default frequency 32kHz
  else pwm_frequency = _constrain(pwm_frequency, _PWM_FREQUENCY_MIN, _PWM_FREQUENCY_MAX); // constrain to 4-32kHz max
  //  High PWM frequency
  // - always max 32kHz
  int ret_flag = 0;
  ret_flag += _configureComplementaryPair(pinA_h, pinA_l, pwm_frequency);
  ret_flag += _configureComplementaryPair(pinB_h, pinB_l, pwm_frequency);
  ret_flag += _configureComplementaryPair(pinC_h, pinC_l, pwm_frequency);
  if (ret_flag != 0) return SIMPLEFOC_DRIVER_INIT_FAILED;
  GenericDriverParams* params = new GenericDriverParams{
    .pins = { pinA_h, pinA_l, pinB_h, pinB_l, pinC_h, pinC_l },
    .pwm_frequency = pwm_frequency,
    .dead_zone = dead_zone
  };
  // _syncAllTimers();
  return params;
}

void _writeDutyCycle6PWM(float dc_a, float dc_b, float dc_c, PhaseState* phase_state, void* params) {
  _setPwmPair(((GenericDriverParams*) params)->pins[0], ((GenericDriverParams*) params)->pins[1], dc_a * 255.0, ((GenericDriverParams*) params)->dead_zone * 255.0, phase_state[0]);
  _setPwmPair(((GenericDriverParams*) params)->pins[2], ((GenericDriverParams*) params)->pins[3], dc_b * 255.0, ((GenericDriverParams*) params)->dead_zone * 255.0, phase_state[1]);
  _setPwmPair(((GenericDriverParams*) params)->pins[4], ((GenericDriverParams*) params)->pins[5], dc_c * 255.0, ((GenericDriverParams*) params)->dead_zone * 255.0, phase_state[2]);
}
